# rozetka_keepa

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  HISTORY.rst  README.md  README.rst  TODO.md  deploy.cmd  deploy_remote.cmd  entrypoint.sh  pyproject.toml  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-image.yml  manual.yml
rozetka_keepa/: __main__.py  constants.py  db.py  influxdb.py  telegram.py  tools.py
rozetka_keepa/handlers/: commands.py  loop.py
rozetka_keepa/models/: callbacks.py
script/: deploy.cmd
src/rozetka_keepa/: __main__.py  constants.py  db.py  influxdb.py  telegram.py
src/rozetka_keepa/handlers/: commands.py  loop.py
