[tool.poetry]
name = "rozetka-keepa"
version = "0.3.0"
description = "Rozetka.ua Keepa"
authors = ["Alexey ALERT Rubasheff <alexey.rubasheff@gmail.com>"]
readme = "README.md"
classifiers = [  # https://pypi.org/pypi?%3Aaction=list_classifiers
    "Topic :: Software Development :: Libraries :: Python Modules"
]
homepage = "https://github.com/ALERTua/rozetka_keepa"
repository = "https://github.com/ALERTua/rozetka_keepa"
documentation = "https://github.com/ALERTua/rozetka_keepa"
keywords = ["rozetka"]
include = ["HISTORY.rst"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ALERTua/rozetka_keepa/issues"
"Rozetka API" = "https://github.com/ALERTua/rozetka_api"
"Rozetka Keepa" = "https://github.com/ALERTua/rozetka_keepa"
"Rozetka FastAPI" = "https://github.com/ALERTua/rozetka_fastapi"
"Rozetka UserScript" = "https://github.com/ALERTua/rozetka_userscript"

[tool.poetry.dependencies]
python = "^3.12"
pendulum = "*"
rozetka-api = {version="*", allow-prereleases = true}
aiogram = "*"
sqlalchemy = "*"
psycopg2-binary = "*"
sqlalchemy-utils = "*"
passlib = "*"
apscheduler = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
