[tool.poetry]
package-mode = false
name = "rozetka_keepa"
description = "Rozetka.ua Keepa"
authors = ["Alexey ALERT Rubasheff <alexey.rubasheff@gmail.com>"]
readme = "README.md"
classifiers = [  # https://pypi.org/pypi?%3Aaction=list_classifiers
    "Topic :: Software Development :: Libraries :: Python Modules"
]
homepage = "https://github.com/ALERTua/rozetka_keepa"
repository = "https://github.com/ALERTua/rozetka_keepa"
documentation = "https://github.com/ALERTua/rozetka_keepa"
keywords = ["rozetka"]
include = ["HISTORY.rst"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ALERTua/rozetka_keepa/issues"
"Rozetka API" = "https://github.com/ALERTua/rozetka_api"
"Rozetka Keepa" = "https://github.com/ALERTua/rozetka_keepa"
"Rozetka FastAPI" = "https://github.com/ALERTua/rozetka_fastapi"
"Rozetka UserScript" = "https://github.com/ALERTua/rozetka_userscript"

[tool.poetry.dependencies]
python = "^3.12"
pendulum = "^3.0.0"
rozetka-api = {version="^1.6.6", allow-prereleases = true}
aiogram = "^3.15.0"
sqlalchemy = "^2.0.38"
psycopg2-binary = "^2.9.10"
sqlalchemy-utils = "^0.41.2"
passlib = "^1.7.4"
apscheduler = "^3.11.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
poetry = "^1.8.4"
pre-commit = "^4.0.1"
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
